final name changes
fixes #48

--- a/src/less/navbar.less
+++ b/src/less/navbar.less
@@ -1,5 +1,5 @@
 .setNavigationStyle() when (@navbar-text-style = navbar-light) {
-	.ab-header {
+	.ft-header {
 		.navbar-brand {
 			color: @navbar-light-active-color;
 
@@ -56,7 +56,7 @@
 }
 
 .setNavigationStyle() when (@navbar-text-style = navbar-dark) {
-	.ab-header {
+	.ft-header {
 		.navbar-brand {
 			color: @navbar-dark-active-color;
 
