--- a/templates/Pages/Standard.hbs
+++ b/templates/Pages/Standard.hbs
@@ -209,5 +209,5 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-ab-page-body-container:ab-page-footer-container-fluid
+ft-page-body-container:ft-page-footer-container-fluid
 {{/PRESET_TEMPLATE_OPTIONS}}
