adds template defaults

--- a/templates/Regions/Jumbotron.hbs
+++ b/templates/Regions/Jumbotron.hbs
@@ -63,4 +63,6 @@
 []
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
-{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}
+ft-region-title-size-display-2
+{{/PRESET_TEMPLATE_OPTIONS}}
