--- a/templates/Regions/Standard.hbs
+++ b/templates/Regions/Standard.hbs
@@ -38,4 +38,6 @@
 []
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
-{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}
+ft-region-title-size-h2
+{{/PRESET_TEMPLATE_OPTIONS}}
