more template cleaning

--- a/templates/Buttons/Standard.hbs
+++ b/templates/Buttons/Standard.hbs
@@ -1,5 +1,6 @@
 {{#TEMPLATE}}
 <button type="button" id="#BUTTON_ID#" class="btn #BUTTON_CSS_CLASSES#" onclick="#JAVASCRIPT#" #BUTTON_ATTRIBUTES#><i class="#ICON_CSS_CLASSES#"></i>#LABEL#</button>
+
 {{/TEMPLATE}}
 {{#HOT_TEMPLATE}}{{/HOT_TEMPLATE}}
 
@@ -10,6 +11,4 @@
 []
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
-{{#PRESET_TEMPLATE_OPTIONS}}
-ab-button-tooltip
-{{/PRESET_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
