--- a/templates/Fields/Image (Display image).hbs
+++ b/templates/Fields/Image (Display image).hbs
@@ -20,7 +20,5 @@
 {{#TEMPLATE_OPTIONS}}
 []
 {{/TEMPLATE_OPTIONS}}
-{{#DEFAULT_TEMPLATE_OPTIONS}}
-ab-image-fluid
-{{/DEFAULT_TEMPLATE_OPTIONS}}
+{{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
