--- a/templates/ReportNamedColumns/Cards.hbs
+++ b/templates/ReportNamedColumns/Cards.hbs
@@ -52,6 +52,4 @@
 []
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
-{{#PRESET_TEMPLATE_OPTIONS}}
-ab-card-img-top
-{{/PRESET_TEMPLATE_OPTIONS}}
+{{#PRESET_TEMPLATE_OPTIONS}}{{/PRESET_TEMPLATE_OPTIONS}}
