adds media component

--- a/src/scss/_apex_components.scss
+++ b/src/scss/_apex_components.scss
@@ -10,6 +10,7 @@
 @import "apex_components/images";
 @import "apex_components/jumbotron";
 @import "apex_components/labels";
+@import "apex_components/media";
 @import "apex_components/modals";
 @import "apex_components/navbar";
 @import "apex_components/paginations";
