--- a/templates/Regions/Jumbotron.hbs
+++ b/templates/Regions/Jumbotron.hbs
@@ -15,7 +15,7 @@
 			<div class="ft-region-right">#EXPAND#</div>
 		</div>
 
-		<div class="ft-region-body t-Region-body">#BODY##SUB_REGIONS#</div>
+		<div class="ft-region-body t-Region-body mt-3">#BODY##SUB_REGIONS#</div>
 
 		<div class="ft-region-buttons d-flex flex-row justify-content-between">
 			<div class="ft-region-left">#CLOSE##HELP#</div>
@@ -64,5 +64,5 @@
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-ft-region-title-size-display-2
+text-left:ft-region-title-size-display-4
 {{/PRESET_TEMPLATE_OPTIONS}}
