adds media and alert component

--- a/templates/Fields/Image (Display image).hbs
+++ b/templates/Fields/Image (Display image).hbs
@@ -2,10 +2,11 @@
 {{#BEFORE_LABEL}}{{/BEFORE_LABEL}}
 {{#AFTER_LABEL}}{{/AFTER_LABEL}}
 {{#BEFORE_ITEM}}
-<div class="ft-image #ITEM_CSS_CLASSES#">
+<figure class="figure ft-image #ITEM_CSS_CLASSES#">
 {{/BEFORE_ITEM}}
 {{#AFTER_ITEM}}
-<figcaption class="figure-caption">#CURRENT_ITEM_HELP_TEXT#</figcaption></div>
+<figcaption class="figure-caption">#CURRENT_ITEM_HELP_TEXT#</figcaption>
+</figure>
 {{/AFTER_ITEM}}
 {{#AFTER_LABEL_AND_ITEM}}{{/AFTER_LABEL_AND_ITEM}}
 
