--- a/templates/Lists/Media.hbs
+++ b/templates/Lists/Media.hbs
@@ -8,7 +8,7 @@
 {{/LIST_TEMPLATE_BEFORE_ROWS}}
 {{#LIST_TEMPLATE_CURRENT}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -18,7 +18,7 @@
 {{/LIST_TEMPLATE_CURRENT}}
 {{#ITEM_TEMPLATE_CURR_W_CHILD}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -28,7 +28,7 @@
 {{/ITEM_TEMPLATE_CURR_W_CHILD}}
 {{#LIST_TEMPLATE_NONCURRENT}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -38,7 +38,7 @@
 {{/LIST_TEMPLATE_NONCURRENT}}
 {{#ITEM_TEMPLATE_NONCURR_W_CHILD}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -53,7 +53,7 @@
 {{/BEFORE_SUB_LIST}}
 {{#SUB_LIST_ITEM_CURRENT}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -63,7 +63,7 @@
 {{/SUB_LIST_ITEM_CURRENT}}
 {{#SUB_LIST_ITEM_NONCURRENT}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -73,7 +73,7 @@
 {{/SUB_LIST_ITEM_NONCURRENT}}
 {{#SUB_TEMPLATE_CURR_W_CHILD}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -83,7 +83,7 @@
 {{/SUB_TEMPLATE_CURR_W_CHILD}}
 {{#SUB_TEMPLATE_NONCURR_W_CHILD}}
 <div class="media mt-3">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -98,7 +98,7 @@
 
 {{#FIRST_LIST_TEMPLATE_NONCURRENT}}
 <div class="media">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -108,7 +108,7 @@
 {{/FIRST_LIST_TEMPLATE_NONCURRENT}}
 {{#FIRST_LIST_TEMPLATE_CURRENT}}
 <div class="media">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -118,7 +118,7 @@
 {{/FIRST_LIST_TEMPLATE_CURRENT}}
 {{#F_ITEM_TEMPLATE_CURR_W_CHILD}}
 <div class="media">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -128,7 +128,7 @@
 {{/F_ITEM_TEMPLATE_CURR_W_CHILD}}
 {{#FITEM_TEMPLATE_NONCURR_W_CHILD}}
 <div class="media">
-    <i class="fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
+    <i class="media-icon fa-3x mr-3 #ICON_CSS_CLASSES#" alt="#LIST_LABEL#"></i>
     <div class="media-body">
         <h5 class="mt-0 mb-1">#TEXT#</h5>
         <div class="media-text">#A01#</div>
@@ -195,6 +195,37 @@ Text Content
         "HELP_TEXT": ""
       }
     ]
+  },
+  {
+    "NAME": "MEDIA_ICON_PLACEMENT",
+    "DISPLAY_NAME": "Icon Placement",
+    "DISPLAY_SEQUENCE": 2,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "",
+    "IS_ADVANCED": "N",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "MEDIA_ICON_PLACEMENT_LEFT",
+        "DISPLAY_NAME": "Left",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "ft-media-icon-placement-left",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "MEDIA_ICON_PLACEMENT_RIGHT",
+        "DISPLAY_NAME": "Right",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "ft-media-icon-placement-right",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "MEDIA_ICON_PLACEMENT_ALTERNATE",
+        "DISPLAY_NAME": "Alternate",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "ft-media-icon-placement-alternate",
+        "HELP_TEXT": ""
+      }
+    ]
   }
 ]
 {{/TEMPLATE_OPTION_GROUPS}}
@@ -203,5 +234,5 @@ Text Content
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-ft-media-icon-align-self-start
+ft-media-icon-align-self-start:ft-media-icon-placement-left
 {{/PRESET_TEMPLATE_OPTIONS}}
