--- a/templates/Pages/Standard.hbs
+++ b/templates/Pages/Standard.hbs
@@ -44,7 +44,7 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="ft-main-left col-md-2">#SIDE_GLOBAL_NAVIGATION_LIST##REGION_POSITION_03#</div>
+		<div class="ft-main-left col-sm-3 col-lg-2">#SIDE_GLOBAL_NAVIGATION_LIST##REGION_POSITION_03#</div>
 
 		<main class="ft-main col">
 			<div class="ft-breadcrumb">#REGION_POSITION_04#</div>
@@ -52,7 +52,7 @@
 			<div class="ft-body">#BODY#</div>
 		</main>
 
-		<div class="ft-main-right col-md-2">#REGION_POSITION_05#</div>
+		<div class="ft-main-right col-sm-3 col-lg-2">#REGION_POSITION_05#</div>
 	</div>
 </div>
 
