--- a/src/scss/_apex_extends.scss
+++ b/src/scss/_apex_extends.scss
@@ -1,4 +1,5 @@
 @import "apex_extends/media";
+@import "apex_extends/nav";
 @import "apex_extends/navbar";
 @import "apex_extends/table";
 @import "apex_extends/typography";
